[package]
name = "leaf"
description = "Machine Learning Framework"
version = "0.1.2"
authors = [
  "Maximilian Goisser <max@autumnai.com>",
  "Michael Hirn <mj@autumnai.com>"
]
repository = "https://github.com/autumnai/leaf"
homepage = "https://github.com/autumnai/leaf"
documentation = "http://autumnai.github.io/leaf"
readme = "README.md"
keywords = ["deep-learning", "neural-networks", "machine-learning", "framework"]
license = "MIT"

[dependencies]
collenchyma = { default-features = false, path = "/home/hobofan/autumn/collenchyma" }
# collenchyma = { version = "~0.0.6", default-features = false }
# collenchyma-blas = { version = "*", default-features = false, path = "/home/hobofan/autumn/collenchyma-blas" }
collenchyma-blas = { version = "0.1.0", default-features = false }
collenchyma-nn = { version = "*", default-features = false, path = "/home/hobofan/autumn/collenchyma-nn" }

log = "0.3.2"

clippy = { version = "0.0.23", optional = true }

[dev-dependencies]
env_logger = "0.3"

[features]
default = ["native", "cuda", "opencl"]
native = ["collenchyma/native", "collenchyma-blas/native", "collenchyma-nn/native"]
cuda = ["collenchyma/cuda", "collenchyma-blas/cuda", "collenchyma-nn/cuda"]
opencl = ["collenchyma/opencl", "collenchyma-blas/opencl", "collenchyma-nn/opencl"]

travis = ["native"]
dev = []
lint = ["clippy"]
